z-index issue fixed

--- a/reactversion/source2/src/components/Header/SearchBar/SearchBar.css
+++ b/reactversion/source2/src/components/Header/SearchBar/SearchBar.css
@@ -4,7 +4,7 @@
     top:20px;
     right:73px;
     height:30px;
-    z-index:10;
+    z-index:12;
 }
 
 input.searchInput{
